--- a/lmms_eval/tasks/refcoco/refcoco_bbox_rec_val.yaml
+++ b/lmms_eval/tasks/refcoco/refcoco_bbox_rec_val.yaml
@@ -2,3 +2,4 @@ group: refcoco_bbox_rec
 task: refcoco_bbox_rec_val
 test_split: val
 include: _default_template_bbox_rec_yaml
+dataset_path: /mnt/data4T-2/xhj/huggingface_cache/datasets/lmms-lab/RefCOCO
