--- a/lmms_eval/tasks/refcoco/refcoco_bbox_rec_testA.yaml
+++ b/lmms_eval/tasks/refcoco/refcoco_bbox_rec_testA.yaml
@@ -3,3 +3,6 @@ task: refcoco_bbox_rec_testA
 test_split: testA
 include: _default_template_bbox_rec_yaml
 dataset_path: /mnt/data4T-2/xhj/huggingface_cache/datasets/lmms-lab/RefCOCO
+dataset_kwargs:
+  data_files:
+    testA: "testA-*.parquet"
